--- a/templates/index.html
+++ b/templates/index.html
@@ -138,17 +138,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Dashboard Template</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Visual Admin</a></h3>
+								<span class="meta-category">Тест</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Тест</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project1.jpg' %}" title="Visual Admin">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Visual Admin">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project1.jpg' %}" alt="Visual Admin">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Visual Admin">
 				</div>
 			</div> <!-- /.item -->
 			<div class="item">
@@ -156,17 +156,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Mobile Ready</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Compass Template</a></h3>
+								<span class="meta-category">Тест</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Тест</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project2.jpg' %}" title="Compass Template">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Compass Template">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project2.jpg' %}" alt="Compass Template">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Compass Template">
 				</div>
 			</div> <!-- /.item -->
 			<div class="item">
@@ -174,17 +174,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Responsive Design</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Awesome Theme</a></h3>
+								<span class="meta-category">Тест</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Тест</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project3.jpg' %}" title="Awesome Theme">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Awesome Theme">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project3.jpg' %}" alt="Awesome Theme">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Awesome Theme">
 				</div>
 			</div> <!-- /.item -->
 			<div class="item">
@@ -192,17 +192,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Portfolio</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Volton Personal Site</a></h3>
+								<span class="meta-category">Тест</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Тест</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project4.jpg' %}" title="Volton Personal Site">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Volton Personal Site">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project4.jpg' %}" alt="Volton Personal Site">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Volton Personal Site">
 				</div>
 			</div> <!-- /.item -->
 			<div class="item">
@@ -210,17 +210,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Green</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Rectangle Design</a></h3>
+								<span class="meta-category">Зеленый</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Просто</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project5.jpg' %}" title="Rectangle Design">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Rectangle Design">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project5.jpg' %}" alt="Rectangle Design">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Rectangle Design">
 				</div>
 			</div> <!-- /.item -->
 			<div class="item">
@@ -228,17 +228,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Portfolio</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Masonry Gallery</a></h3>
+								<span class="meta-category">Новости</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Новые новости</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project6.jpg' %}" title="Masonry Gallery">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Masonry Gallery">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project6.jpg' %}" alt="Masonry Gallery">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Masonry Gallery">
 				</div>
 			</div> <!-- /.item -->
 			<div class="item">
@@ -246,17 +246,17 @@
 					<div class="overlay">
 						<div class="overlay-inner">
 							<div class="portfolio-infos">
-								<span class="meta-category">Branding / Identity</span>
-								<h3 class="portfolio-title"><a href="project-slideshow.html">Gloss Template</a></h3>
+								<span class="meta-category">Новости</span>
+								<h3 class="portfolio-title"><a href="project-slideshow.html">Новые новости</a></h3>
 							</div>
 							<div class="portfolio-expand">
-								<a class="fancybox" href="{% static 'images/includes/project7.jpg' %}" title="Gloss Template">
+								<a class="fancybox" href="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" title="Gloss Template">
 									<i class="fa fa-expand"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'images/includes/project7.jpg' %}" alt="Gloss Template">
+					<img src="https://images.unsplash.com/photo-1554556978-b803e19a0d19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Gloss Template">
 				</div>
 			</div> <!-- /.item -->
 		</div> <!-- /#owl-demo -->
@@ -269,20 +269,20 @@
 					<div class="bxslider">
 						<div class="testimonial">
 							<div class="testimonial-content">
-								<span class="testimonial-author">Andy Colin - Architect</span>
-								<p class="testimonial-description">Thank you for all your good work in creating theme. They have a 'presence' which feels right.</p>
+								<span class="testimonial-author">Новости</span>
+								<p class="testimonial-description">Новые новости</p>
 							</div>
 						</div>
 						<div class="testimonial">
 							<div class="testimonial-content">
-								<span class="testimonial-author">Thomas Teddy - Design Writer</span>
-								<p class="testimonial-description">I love the logo. Particularly how the mark can stand on its own. Nice work! It feels tall and proud and powerful — and I love that. That's what I was after.</p>
+								<span class="testimonial-author">Пользователь</span>
+								<p class="testimonial-description">Лучшая работа работа работа</p>
 							</div>
 						</div>
 						<div class="testimonial">
 							<div class="testimonial-content">
-								<span class="testimonial-author">John Willy - Developer</span>
-								<p class="testimonial-description">You're pretty awesome to work with. Incredibly organized, easy to communicate with, responsive with next iterations, and beautiful work.</p>
+								<span class="testimonial-author">Пользователь 2</span>
+								<p class="testimonial-description">Пользователь работа работа лучшая</p>
 							</div>
 						</div>
 					</div> <!-- /.bxslider -->
@@ -296,8 +296,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-header">
-						<h2 class="section-title">Meet our happy staff</h2>
-						<p class="section-desc">Medigo is the automated way to keep track of what everyone is working on.</p>
+						<h2 class="section-title">Новости</h2>
+						<p class="section-desc">Новости Новости</p>
 					</div> <!-- /.section-header -->
 				</div> <!-- /.col-md-12 -->
 			</div> <!-- /.row -->
@@ -310,11 +310,11 @@
 						<div class="team-member">
 							<div class="thumb-post">
 								<img src="{% static 'images/includes/member1.jpg' %}" alt="">
-								<span class="member-role">Marketing Manager</span>
+								<span class="member-role">Менеджер</span>
 							</div>
 							<div class="member-content">
-								<h4 class="member-name">Amy Groovy</h4>
-								<p>Duis vitae consequat neque. Nulla pharetra eleifend nulla. </p>
+								<h4 class="member-name">Менеджер</h4>
+								<p>Менеджер </p>
 							</div>
 						</div> <!-- /.team-member -->
 					</div> <!-- /.col-md-4 -->
@@ -323,11 +323,11 @@
 						<div class="team-member">
 							<div class="thumb-post">
 								<img src="{% static 'images/includes/member2.jpg' %}" alt="">
-								<span class="member-role">Web Developer</span>
+								<span class="member-role">Программист</span>
 							</div>
 							<div class="member-content">
-								<h4 class="member-name">Candy Sharp</h4>
-								<p>Duis vitae consequat neque. Nulla pharetra eleifend nulla. </p>
+								<h4 class="member-name">Пользователь два</h4>
+								<p>пользователь пользователь</p>
 							</div>
 						</div> <!-- /.team-member -->
 					</div> <!-- /.col-md-4 -->
@@ -336,11 +336,11 @@
 						<div class="team-member">
 							<div class="thumb-post">
 								<img src="{% static 'images/includes/member3.jpg' %}" alt="">
-								<span class="member-role">Graphic Designer</span>
+								<span class="member-role">Дизайнер</span>
 							</div>
 							<div class="member-content">
-								<h4 class="member-name">Linda Master</h4>
-								<p>Duis vitae consequat neque. Nulla pharetra eleifend nulla. </p>
+								<h4 class="member-name">Мастер своего дела</h4>
+								<p>текст текст текст текст </p>
 							</div>
 						</div> <!-- /.team-member -->
 					</div> <!-- /.col-md-4 -->
@@ -356,8 +356,8 @@
 		        <div class="row">
 		        	<div class="col-md-12">
 		        		<div class="section-header">
-							<h2 class="section-title">Recent from our blog</h2>
-							<p class="section-desc">Everything you need to create a professional website.</p>
+							<h2 class="section-title">Блог</h2>
+							<p class="section-desc">Блог описание</p>
 						</div> <!-- /.section-header -->
 		        	</div> <!-- /.col-md-12 -->
 		        </div> <!-- /.row -->
@@ -368,8 +368,8 @@
 		        				<a href="blog-single.html"><img src="{% static 'images/includes/blogthumb1.jpg' %}" alt="" class="img-circle"></a>
 		        			</div>
 		        			<div class="blog-post-content">
-		        				<h4 class="post-title"><a href="blog-single.html">Getting Creative With the Google Maps API</a></h4>
-		        				<span class="meta-post-date">12 February 2084</span>
+		        				<h4 class="post-title"><a href="blog-single.html">Апи Апи Апи</a></h4>
+		        				<span class="meta-post-date">Время время </span>
 		        			</div>
 		        		</div> <!-- /.blog-post -->
 		        	</div> <!-- /.col-md-4 -->
@@ -379,8 +379,8 @@
 		        				<a href="blog-single.html"><img src="{% static 'images/includes/blogthumb2.jpg' %}" alt="" class="img-circle"></a>
 		        			</div>
 		        			<div class="blog-post-content">
-		        				<h4 class="post-title"><a href="blog-single.html">Design Deliverables – easily share project</a></h4>
-		        				<span class="meta-post-date">10 February 2084</span>
+		        				<h4 class="post-title"><a href="blog-single.html">текст текст текст </a></h4>
+		        				<span class="meta-post-date">Февраль</span>
 		        			</div>
 		        		</div> <!-- /.blog-post -->
 		        	</div> <!-- /.col-md-4 -->
@@ -390,8 +390,8 @@
 		        				<a href="blog-single.html"><img src="{% static 'images/includes/blogthumb3.jpg' %}" alt="" class="img-circle"></a>
 		        			</div>
 		        			<div class="blog-post-content">
-		        				<h4 class="post-title"><a href="blog-single.html">Using Templates to Get Your Clients Thinking</a></h4>
-		        				<span class="meta-post-date">8 February 2084</span>
+		        				<h4 class="post-title"><a href="blog-single.html">Используй</a></h4>
+		        				<span class="meta-post-date">Февраль</span>
 		        			</div>
 		        		</div> <!-- /.blog-post -->
 		        	</div> <!-- /.col-md-4 -->
